--- a/locale/ca.po
+++ b/locale/ca.po
@@ -4,7 +4,7 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:account.tax.rule,use_suspensive_regime:"
 msgid "Use Suspensive Regime"
-msgstr "Utilitzar Règim suspensiu"
+msgstr "Utilitzar règim suspensiu"
 
 msgctxt "field:account.tax.rule.line,suspensive_regime:"
 msgid "Suspensive Regime"
@@ -21,6 +21,10 @@ msgstr "Utilitzar règim suspensiu"
 msgctxt "field:party.address,tax_deposit_code:"
 msgid "Tax Deposit Code"
 msgstr "Codi de dipòsit fiscal"
+
+msgctxt "field:product.product,suspensive_regime:"
+msgid "Suspensive Regime"
+msgstr "Règim suspensiu"
 
 msgctxt "field:product.template,suspensive_regime:"
 msgid "Suspensive Regime"
